# Promptify-Search-Type-Ahead-System

backend/: .env  .gitignore  Cargo.toml
backend-go/: go.mod  go.sum  main.go
backend-go/redis/: client.go  interface.go
backend-go/utils/: errors.go
backend/datasets/: ecommerce.csv
backend/src/: main.rs  state.rs
backend/src/api/: auto_complete_handler.rs  auto_complete_handler_v2.rs  mod.rs  server.rs
backend/src/config/: envconfig.rs  mod.rs
backend/src/database/: mod.rs  pg_connect.rs
backend/src/models/: mod.rs  response_models.rs
backend/src/models/response/: suggestions.rs
backend/src/repository/: query.rs
backend/src/services/: mod.rs  query.rs  trie.rs  trie_query.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: suggestions.ts
frontend/src/components/: SearchBox.tsx
