[package]
name = "promptify"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
cargo-modules = "0.19.1"
dotenv = "0.15.0"
envconfig = "0.11.0"
serde = { version = "1.0.216", features = ["derive"] }
slog = "2.7.0"
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
serde_json = "1.0"
actix-cors = "0.7.0"
redis = "0.8.0"